<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtOtherUser"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:hint="@string/recipient_user_name"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/no_account_sign_up_here"
            android:textColor="@android:color/black" />

    </LinearLayout>
</RelativeLayout>
